--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,15 @@
     <string name="dialog_title">Witamy!</string>
     <string name="close">Zamknij</string>
     <string name="do_not_show_more">Nie pokazuj więcej</string>
-    <string name="info">Lokalizacja pojazdów jest przybliżona. Nie są widoczne pojazdy, które nie przekazują informacji o swoim położeniu. Dane o lokalizacji odświeżają się co około 30 sekund.
+    <string name="info">Lokalizacja pojazdów jest przybliżona. Nie są widoczne pojazdy, które nie przekazują informacji o swoim położeniu. Dane o lokalizacji odświeżają się co około 60 sekund.
         \n\nAplikacja nieoficjalna. Korzysta ona z danych podchodzących ze strony http://zditm.szczecin.pl. Proszę mieć na uwadze, że system czasem może nie działać (lub działać wolno) i nie jest to zależne od aplikacji.
     </string>
     <string name="no_internet">Brak połączenia z internetem</string>
     <string name="refresh">Odśwież</string>
+    <string name="clear_filter">Wyczyść filtr</string>
+
+    <string name="normal_tram_lines">Linie tramwajowe dzienne zwykłe</string>
+    <string name="normal_bus_lines">Linie autobusowe dzienne zwykłe</string>
+    <string name="special_bus_lines">Linie autobusowe dzienne pospieszne</string>
+    <string name="night_bus_lines">Linie autobusowe nocne</string>
 </resources>
