--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,12 @@
     </string>
     <string name="no_internet">Brak połączenia z internetem</string>
     <string name="refresh">Odśwież</string>
-    <string name="clear_filter">Wyczyść filtr</string>
+    <string name="clear_filter">Pokaż wszystkie</string>
 
     <string name="normal_tram_lines">Linie tramwajowe dzienne zwykłe</string>
     <string name="normal_bus_lines">Linie autobusowe dzienne zwykłe</string>
     <string name="special_bus_lines">Linie autobusowe dzienne pospieszne</string>
     <string name="night_bus_lines">Linie autobusowe nocne</string>
+
+    <string name="set_favourite">Ustawiono jako mapę domyślną - będzie ona widoczna od razu po włączeniu aplikacji.</string>
 </resources>
