--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="normal_bus_lines">Linie autobusowe dzienne zwykłe</string>
     <string name="special_bus_lines">Linie autobusowe dzienne pospieszne</string>
     <string name="night_bus_lines">Linie autobusowe nocne</string>
+    <string name="substitute_bus_lines">Linie autobusowe dzienne zastępcze</string>
 
     <string name="set_favourite">Ustawiono jako mapę domyślną - będzie ona widoczna od razu po włączeniu aplikacji.</string>
 </resources>
