move map when user location found

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="substitute_bus_lines">Linie autobusowe dzienne zastępcze</string>
 
     <string name="set_favourite">Ustawiono jako mapę domyślną - będzie ona widoczna od razu po włączeniu aplikacji.</string>
+    <string name="use_location">Użyj lokalizacji aby dostosować mapę do pozycji</string>
+    <string name="zoom_map">Przybliż mapę gdy znaleziono lokalizację</string>
 </resources>
