added info dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,13 @@
     <string name="zoom_map">Przybliż mapę gdy znaleziono lokalizację</string>
 
     <string name="lines_request_error">Nie udało się pobrać linii</string>
+    <string name="info_request_error">Nie udało się pobrać aktualności</string>
+    <string name="changes">Zmiany w rozkładach jazdy</string>
+    <string name="no_changes">Brak aktualności</string>
+    <string name="ad">Reklama</string>
+    <string name="ad_text">Chciałbyś zobaczyć tu swoją reklamę? Potrzebujesz w szybki sposób dotrzeć do mieszkańców Szczecina?</string>
+
+    <string name="from_date">Od %s</string>
+    <string name="to_date">do %s</string>
+    <string name="contact_us">Napisz do nas</string>
 </resources>
