added touristic bus lines

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="special_bus_lines">Linie autobusowe dzienne pospieszne</string>
     <string name="night_bus_lines">Linie autobusowe nocne</string>
     <string name="substitute_bus_lines">Linie autobusowe dzienne zastępcze</string>
+    <string name="touristic_bus_lines">Linie autobusowe dzienne turystyczne</string>
 
     <string name="set_favourite">Ustawiono jako mapę domyślną - będzie ona widoczna od razu po włączeniu aplikacji.</string>
     <string name="use_location">Użyj lokalizacji aby dostosować mapę do pozycji</string>
