fix widget reload and schedule board loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="refresh_widgets_every">Odświeżaj widgety co</string>
     <string name="seconds">sekund(y)</string>
 
+    <string name="error_occurred">Wystąpił błąd, pracujemy już nad tym</string>
+
     <string-array name="headers">
         <item>Lp</item>
         <item>Numer</item>
