--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Komunikacja Miejska Szczecin</string>
 
+    <string name="owner_email">zienowicz.pawel@gmail.com</string>
+    <string name="owner_phone">tel:509207723</string>
+    <string name="email_title">Reklama - Komunikacja Miejska Szczecin</string>
+    <string name="latamy_url">http://latamy.szczecin.pl</string>
+
     <string name="dialog_title">Witamy!</string>
     <string name="close">Zamknij</string>
     <string name="do_not_show_more">Nie pokazuj więcej</string>
