--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
 
     <string name="lines_request_error">Nie udało się pobrać linii</string>
     <string name="info_request_error">Nie udało się pobrać aktualności</string>
+    <string name="stops_request_error">Nie udało się pobrać przystanków</string>
     <string name="changes">Zmiany w rozkładach jazdy</string>
     <string name="no_changes">Brak aktualności</string>
     <string name="ad">Reklama</string>
